--- a/portfolio.css
+++ b/portfolio.css
@@ -97,6 +97,10 @@ body{
         height: 65px;
     }
 }
+.contact-container{
+    display: flex;
+    justify-content: center;
+}
 .contact{
     background-color: aqua;
     margin: 50px;
@@ -104,7 +108,6 @@ body{
     border-radius: 10px;
     height: 400px;
     width: 500px;
-    
 }
 .heading_form{
     background-color: black;
